# mva-kernel-hw3

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: main.md
reports/: report.tex
reports/snippets/: ex1_q2a.py  ex1_q2b.py  ex1_q2c.py  ex2_q2a.py  ex2_q2b.py
src/hw3/: utils.py
src/hw3/models/: classify.py  kernel.py
